--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>ISFrame</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <java-version>1.6</java-version>
         <org.springframework-version>4.3.3.RELEASE</org.springframework-version>
@@ -26,7 +27,13 @@
             </plugin>
         </plugins>
     </build>
-
+    <!-- ojdbc 다운받기위해 추가 -->
+    <repositories>
+        <repository>
+            <id>oracle</id> <name>ORACLE JDBC Repository</name>
+            <url>https://maven.atlassian.com/3rdparty/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!-- Spring -->
         <dependency>
@@ -111,6 +118,13 @@
         </dependency>
 
         <!-- DB -->
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.4</version>
+        </dependency>
+
         <!-- Maria DB -->
         <!-- https://mvnrepository.com/search?q=mybatis-spring -->
         <dependency>
