--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
             </plugin>
         </plugins>
     </build>
+
     <!-- ojdbc 다운받기위해 추가 -->
     <repositories>
         <repository>
@@ -34,6 +35,7 @@
             <url>https://maven.atlassian.com/3rdparty/</url>
         </repository>
     </repositories>
+
     <dependencies>
         <!-- Spring -->
         <dependency>
@@ -117,7 +119,7 @@
             <version>2.4</version>
         </dependency>
 
-        <!-- DB -->
+        <!-- Oracle/DB -->
 
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
