--- a/pom.xml
+++ b/pom.xml
@@ -114,12 +114,6 @@
             <version>1.3.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-        </dependency>
-
         <!-- Oracle/DB -->
 
         <dependency>
@@ -293,14 +287,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- commons-fileupload -->
-        <!-- multipart등을 사용할수 있음 -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-
         <!-- apache poi (excel download)-->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -333,7 +319,18 @@
             <artifactId>poi-scratchpad</artifactId>
             <version>5.2.2</version>
         </dependency>
-
+        <!-- json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+        <!-- 메일 api -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
 
 </project>
